--- a/mysql.cnf
+++ b/mysql.cnf
@@ -2,6 +2,6 @@
 host = localhost
 port = 3306
 user = root
-password = admin
+password = nsKjDYio12@05!%
 database = equipment_journal
 default-charset = utf-8
